test/sema/int-literal-initializer-overflow.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:14: error: 128 is out of range for type 'int8'
    int8 b = 128;
}
